test/files/neg/bug421.check
bug421.scala:5: error: no regular expression pattern allowed here
(regular expression patterns are only allowed in arguments to *-parameters)
    case Bar("foo",_*) => error("huh?");
                    ^
one error found
